<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/default_statusbar_height"
    android:paddingLeft="@dimen/common_padding"
    android:paddingRight="@dimen/common_padding"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/sizeStandard"
        android:id="@+id/tv_prompt"
        android:text="@string/edit_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/ll_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/bt_cache_commit"
            style="@style/bt_common"
            android:layout_width="@dimen/bt_width_common"
            android:layout_marginBottom="@dimen/bt_width_common"
            android:layout_weight="1"
            android:text="@string/cache_commit"
            />
        <Button
            android:id="@+id/bt_commit"
            style="@style/bt_common"
            android:layout_width="@dimen/bt_width_common"
            android:layout_marginBottom="@dimen/bt_width_common"
            android:text="@string/commit"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/bt_err_commit"
            style="@style/bt_common"
            android:layout_width="@dimen/bt_width_common"
            android:layout_marginBottom="@dimen/bt_width_common"
            android:layout_weight="1"
            android:text="@string/err_commit"
            />
    </LinearLayout>
    <Spinner
        android:id="@+id/sp_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ll_bt"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/ll_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_prompt"
        android:layout_above="@id/sp_manager"
        android:divider="@drawable/light_divider_line"
        android:showDividers="beginning|middle|end"
        >
    </LinearLayout>

</RelativeLayout>