<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    >
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_bar_height_top"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sizeStandard"
            android:text="@string/task_list" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bt_rect"
            android:id="@+id/btn_search"
            android:text="@string/search"
            />
    </RelativeLayout>
 <SearchView
        android:id="@+id/sv_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:inputType="text"
        android:iconifiedByDefault="true"
        android:background="@color/color18"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sv_task"
        android:id="@+id/tv_none"
        android:text="@string/task_none"
        android:gravity="center"
        android:visibility="gone"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_tasks"
        android:layout_below="@id/sv_task"
        />
</RelativeLayout>